# mpeg-pcc-tmc13-lib

./: CMakeLists.txt
tmc3/: CMakeLists.txt
